--- a/package.json
+++ b/package.json
@@ -15,12 +15,16 @@
     "react-dom": "^18.3.1",
     "react-responsive": "^10.0.0",
     "react-router-dom": "^6.24.0",
-    "sass": "^1.77.6"
+    "react-slick": "^0.30.2",
+    "sass": "^1.77.6",
+    "slick-carousel": "^1.8.1",
+    "smtpexpress": "^0.0.14"
   },
   "devDependencies": {
     "@types/node": "^20.14.9",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/react-slick": "^0.23.13",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
     "@typescript-eslint/parser": "^7.13.1",
     "@vitejs/plugin-react": "^4.3.1",
